--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
 	</div>
 </div>
 
-<a href="https://github.com/FrancisSG" title="FrancisSG's Github"> <img class="icon" src="https://bit.ly/32Lf1M7"> </a>
+<a href="https://github.com/FrancisSG" title="FrancisSG's Github"> <img class="icon" src="gicon.png"> </a>
 
 <script
 src="https://code.jquery.com/jquery-3.4.1.min.js"
